--- a/week1/day5/todo-list/views/pages/home.ejs
+++ b/week1/day5/todo-list/views/pages/home.ejs
@@ -6,7 +6,7 @@
     <main>
         <h1><%= title %></h1>
         <p><%= description %></p>
-        <button><%= firstButton %></button>
+        <button class="hero-btn"><%= firstButton %></button>
     </main>
     <%- include("../partials/footer") %>
 </body>
