--- a/week1/day5/todo-list/public/css/style.css
+++ b/week1/day5/todo-list/public/css/style.css
@@ -32,3 +32,57 @@ li a{
 footer {
     margin-top: 2rem;
 }
+
+#todo-form{
+    display: flex;
+    margin: 2rem 0;
+    /* border: 1px solid black; */
+}
+
+#todo-form input{
+    width: 100%;
+    border: 1px solid #dedede;
+    padding: 4px 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    outline: none;
+}
+
+#todo-form button{
+    padding: 4px 12px;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: black;
+    color: white;
+}
+
+#todo-list li{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+    border-bottom: 1px solid #dedede;
+    padding-bottom: 0.5rem;
+}
+
+#todo-list button{
+    padding: 4px 12px;
+    border: none;
+    border-radius: 4px;
+    background-color: black;
+    color: white;
+}
+
+.hero-btn{
+    padding: 4px 12px;
+    border: none;
+    border-radius: 4px;
+    background-color: black;
+    color: white;
+}
+
+#form-action{
+    display: flex;
+    gap: 0.5rem;
+}
